# botapi

./: .editorconfig  .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  setup.py
examples/py/: README.md  docker-compose.yml  pyrightconfig.json
examples/py/src/: __init__.py  __main__.py  app.py  logger.py
examples/py/src/services/: __init__.py  healthcheck.py
examples/rs/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/rs/src/: main.rs
proto/: buf.yaml
proto/botapi/command/v1/: command_service.proto
proto/botapi/expense/v1/: expense.proto  expense_service.proto  period_type.proto
proto/botapi/healthcheck/v1/: healthcheck_service.proto  heathcheck_service.proto
proto/botapi/media/v1/: media_service.proto
