[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: move to tag if may
botapi = { git="https://github.com/web-zavod/botapi", branch="master" }
tonic = "0.6.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
log = "0.4.8"
env_logger = "0.9.0"
